--- a/src/locales/bg-BG.json
+++ b/src/locales/bg-BG.json
@@ -44,7 +44,7 @@
     "withBackground": "Фон",
     "exportEmbedScene": "",
     "exportEmbedScene_details": "Данните от сцената ще бъдат екпортирани в PNG/SVG файл, за да може сцената да бъде възстановена от него.\nТова ще увеличи размера на файла.",
-    "addWatermark": "Добави \"Направено с Excalidraw\"",
+    "addWatermark": "Добави \"Направено с Creativedraw\"",
     "handDrawn": "Нарисувано на ръка",
     "normal": "Нормален",
     "code": "Код",
@@ -77,7 +77,7 @@
     "untitled": "Неозаглавено",
     "name": "Име",
     "yourName": "Вашето име",
-    "madeWithExcalidraw": "Направено с Excalidraw",
+    "madeWithExcalidraw": "Направено с Creativedraw",
     "group": "Групирай селекцията",
     "ungroup": "Спри групирането на селекцията",
     "collaborators": "Сътрудници",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "Не може да се експортира празно платно.",
     "couldNotCopyToClipboard": "",
     "decryptFailed": "Данните не можаха да се дешифрират.",
-    "uploadedSecurly": "Качването е защитено с криптиране от край до край, което означава, че сървърът Excalidraw и трети страни не могат да четат съдържанието.",
+    "uploadedSecurly": "Качването е защитено с криптиране от край до край, което означава, че сървърът Creativedraw и трети страни не могат да четат съдържанието.",
     "loadSceneOverridePrompt": "Зареждането на външна рисунка ще презапише настоящото ви съдържание. Желаете ли да продължите?",
     "collabStopOverridePrompt": "Прекратяването на сесията ще презапише предишната, локално запазена, рисунка. Сигурни ли сте?\n\n(Ако искате да продължите с локалната рисунка, просто затворете таба на браузъра.)",
     "errorAddingToLibrary": "",
@@ -373,7 +373,7 @@
     "removeItemsFromLib": ""
   },
   "encrypted": {
-    "tooltip": "Вашите рисунки са криптирани от край до край, така че сървърите на Excalidraw няма да могат да ги виждат.",
+    "tooltip": "Вашите рисунки са криптирани от край до край, така че сървърите на Creativedraw няма да могат да ги виждат.",
     "link": ""
   },
   "stats": {
