--- a/src/locales/eu-ES.json
+++ b/src/locales/eu-ES.json
@@ -44,7 +44,7 @@
     "withBackground": "Atzeko planoa",
     "exportEmbedScene": "Txertatu eszena",
     "exportEmbedScene_details": "Eszenaren datuak esportatutako PNG/SVG fitxategian gordeko dira, eszena bertatik berrezartzeko.\nEsportatutako fitxategien tamaina handituko da.",
-    "addWatermark": "Gehitu \"Excalidraw bidez egina\"",
+    "addWatermark": "Gehitu \"Creativedraw bidez egina\"",
     "handDrawn": "Eskuz marraztua",
     "normal": "Normala",
     "code": "Kodea",
@@ -77,7 +77,7 @@
     "untitled": "Izengabea",
     "name": "Izena",
     "yourName": "Zure izena",
-    "madeWithExcalidraw": "Excalidraw bidez egina",
+    "madeWithExcalidraw": "Creativedraw bidez egina",
     "group": "Hautapena taldea bihurtu",
     "ungroup": "Desegin hautapenaren taldea",
     "collaborators": "Kolaboratzaileak",
@@ -105,7 +105,7 @@
     "showBackground": "Erakutsi atzeko planoaren kolore-hautatzailea",
     "toggleTheme": "Aldatu gaia",
     "personalLib": "Liburutegi pertsonala",
-    "excalidrawLib": "Excalidraw liburutegia",
+    "excalidrawLib": "Creativedraw liburutegia",
     "decreaseFontSize": "Txikitu letra tamaina",
     "increaseFontSize": "Handitu letra tamaina",
     "unbindText": "Askatu testua",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "Ezin izan da oihal hutsa esportatu.",
     "couldNotCopyToClipboard": "Ezin izan da arbelean kopiatu.",
     "decryptFailed": "Ezin izan da deszifratu.",
-    "uploadedSecurly": "Kargatzea muturretik muturrerako zifratze bidez ziurtatu da, hau da, Excalidraw zerbitzariak eta hirugarrenek ezin dutela edukia irakurri.",
+    "uploadedSecurly": "Kargatzea muturretik muturrerako zifratze bidez ziurtatu da, hau da, Creativedraw zerbitzariak eta hirugarrenek ezin dutela edukia irakurri.",
     "loadSceneOverridePrompt": "Kanpoko marrazkia kargatzeak lehendik duzun edukia ordezkatuko du. Jarraitu nahi duzu?",
     "collabStopOverridePrompt": "Saioa gelditzeak lokalean gordetako zure aurreko marrazkia gainidatziko du. Ziur zaude?\n\n(Zure marrazki lokala mantendu nahi baduzu, itxi arakatzailearen fitxa.)",
     "errorAddingToLibrary": "Ezin izan da elementua liburutegian gehitu",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "Honek {{numShapes}} forma gehituko ditu zure liburutegian. Ziur zaude?",
     "imageDoesNotContainScene": "Irudi honek ez dirudi eszena daturik duenik. Eszena kapsulatzea gaitu al duzu esportazioan?",
     "cannotRestoreFromImage": "Ezin izan da eszena leheneratu irudi fitxategi honetatik",
-    "invalidSceneUrl": "Ezin izan da eszena inportatu emandako URLtik. Gaizki eratuta dago edo ez du baliozko Excalidraw JSON daturik.",
+    "invalidSceneUrl": "Ezin izan da eszena inportatu emandako URLtik. Gaizki eratuta dago edo ez du baliozko Creativedraw JSON daturik.",
     "resetLibrary": "Honek zure liburutegia garbituko du. Ziur zaude?",
     "removeItemsFromsLibrary": "Liburutegitik {{count}} elementu ezabatu?",
     "invalidEncryptionKey": "Enkriptazio-gakoak 22 karaktere izan behar ditu. Zuzeneko lankidetza desgaituta dago.",
@@ -276,7 +276,7 @@
     "desc_inProgressIntro": "Zuzeneko lankidetza saioa abian da.",
     "desc_shareLink": "Partekatu esteka hau elkarlanean aritu nahi duzun edonorekin:",
     "desc_exitSession": "Saioa ixteak aretotik deskonektatuko zaitu, baina eszenarekin lanean jarraitu ahal izango duzu lokalean. Kontuan izan honek ez diela beste pertsonei eragingo, eta euren bertsioan elkarlanean aritu ahal izango dira.",
-    "shareTitle": "Sartu Excalidraw-en zuzeneko lankidetza-saio batean"
+    "shareTitle": "Sartu Creativedraw-en zuzeneko lankidetza-saio batean"
   },
   "errorDialog": {
     "title": "Errorea"
@@ -288,9 +288,9 @@
     "link_title": "Partekatzeko esteka",
     "link_details": "Esportatu irakurtzeko soilik moduko esteka.",
     "link_button": "Esportatu esteka",
-    "excalidrawplus_description": "Gorde eszena zure Excalidraw+ laneko areara.",
+    "excalidrawplus_description": "Gorde eszena zure Creativedraw+ laneko areara.",
     "excalidrawplus_button": "Esportatu",
-    "excalidrawplus_exportError": "Une honetan ezin izan da esportatu Excalidraw+era..."
+    "excalidrawplus_exportError": "Une honetan ezin izan da esportatu Creativedraw+era..."
   },
   "helpDialog": {
     "blog": "Irakurri gure bloga",
@@ -373,8 +373,8 @@
     "removeItemsFromLib": "Kendu hautatutako elementuak liburutegitik"
   },
   "encrypted": {
-    "tooltip": "Zure marrazkiak muturretik muturrera enkriptatu dira, beraz Excalidraw-ren zerbitzariek ezingo dituzte ikusi.",
-    "link": "Excalidraw-ren muturretik muturrerako enkriptatzearen gaineko mezua blogean"
+    "tooltip": "Zure marrazkiak muturretik muturrera enkriptatu dira, beraz Creativedraw-ren zerbitzariek ezingo dituzte ikusi.",
+    "link": "Creativedraw-ren muturretik muturrerako enkriptatzearen gaineko mezua blogean"
   },
   "stats": {
     "angle": "Angelua",
@@ -452,7 +452,7 @@
   "welcomeScreen": {
     "app": {
       "center_heading": "Zure datu guztiak lokalean gordetzen dira zure nabigatzailean.",
-      "center_heading_plus": "Horren ordez Excalidraw+-era joan nahi al zenuen?",
+      "center_heading_plus": "Horren ordez Creativedraw+-era joan nahi al zenuen?",
       "menuHint": "Esportatu, hobespenak, hizkuntzak..."
     },
     "defaults": {
