--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -44,7 +44,7 @@
     "withBackground": "Arrière-plan",
     "exportEmbedScene": "Intégrer la scène",
     "exportEmbedScene_details": "Les données de scène seront enregistrées dans le fichier PNG/SVG exporté, afin que la scène puisse être restaurée à partir de celui-ci.\nCela augmentera la taille du fichier exporté.",
-    "addWatermark": "Ajouter \"Réalisé avec Excalidraw\"",
+    "addWatermark": "Ajouter \"Réalisé avec Creativedraw\"",
     "handDrawn": "À main levée",
     "normal": "Normale",
     "code": "Code",
@@ -77,7 +77,7 @@
     "untitled": "Sans-titre",
     "name": "Nom",
     "yourName": "Votre nom",
-    "madeWithExcalidraw": "Fait avec Excalidraw",
+    "madeWithExcalidraw": "Fait avec Creativedraw",
     "group": "Grouper la sélection",
     "ungroup": "Dégrouper la sélection",
     "collaborators": "Collaborateurs",
@@ -105,7 +105,7 @@
     "showBackground": "Afficher le sélecteur de couleur de fond",
     "toggleTheme": "Changer le thème",
     "personalLib": "Bibliothèque personnelle",
-    "excalidrawLib": "Bibliothèque Excalidraw",
+    "excalidrawLib": "Bibliothèque Creativedraw",
     "decreaseFontSize": "Diminuer la taille de police",
     "increaseFontSize": "Augmenter la taille de la police",
     "unbindText": "Dissocier le texte",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "Impossible d'exporter un canevas vide.",
     "couldNotCopyToClipboard": "Impossible de copier dans le presse-papiers.",
     "decryptFailed": "Les données n'ont pas pu être déchiffrées.",
-    "uploadedSecurly": "Le téléchargement a été sécurisé avec un chiffrement de bout en bout, ce qui signifie que ni Excalidraw ni personne d'autre ne peut en lire le contenu.",
+    "uploadedSecurly": "Le téléchargement a été sécurisé avec un chiffrement de bout en bout, ce qui signifie que ni Creativedraw ni personne d'autre ne peut en lire le contenu.",
     "loadSceneOverridePrompt": "Le chargement d'un dessin externe remplacera votre contenu actuel. Souhaitez-vous continuer ?",
     "collabStopOverridePrompt": "Arrêter la session écrasera votre précédent dessin stocké localement. Êtes-vous sûr·e ?\n\n(Si vous voulez garder votre dessin local, fermez simplement l'onglet du navigateur à la place.)",
     "errorAddingToLibrary": "Impossible d'ajouter l'élément à la bibliothèque",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "Cela va ajouter {{numShapes}} forme(s) à votre bibliothèque. Êtes-vous sûr·e ?",
     "imageDoesNotContainScene": "Cette image ne semble pas contenir de données de scène. Avez-vous activé l'intégration de scène lors de l'exportation ?",
     "cannotRestoreFromImage": "Impossible de restaurer la scène depuis ce fichier image",
-    "invalidSceneUrl": "Impossible d'importer la scène depuis l'URL fournie. Elle est soit incorrecte, soit ne contient pas de données JSON Excalidraw valides.",
+    "invalidSceneUrl": "Impossible d'importer la scène depuis l'URL fournie. Elle est soit incorrecte, soit ne contient pas de données JSON Creativedraw valides.",
     "resetLibrary": "Cela va effacer votre bibliothèque. Êtes-vous sûr·e ?",
     "removeItemsFromsLibrary": "Supprimer {{count}} élément(s) de la bibliothèque ?",
     "invalidEncryptionKey": "La clé de chiffrement doit comporter 22 caractères. La collaboration en direct est désactivée.",
@@ -276,7 +276,7 @@
     "desc_inProgressIntro": "La session de collaboration en direct est maintenant en cours.",
     "desc_shareLink": "Partagez ce lien avec les personnes avec lesquelles vous souhaitez collaborer :",
     "desc_exitSession": "Arrêter la session vous déconnectera de la salle, mais vous pourrez continuer à travailler avec la scène, localement. Notez que cela n'affectera pas les autres personnes, et ils pourront toujours collaborer sur leur version.",
-    "shareTitle": "Rejoindre une session de collaboration en direct sur Excalidraw"
+    "shareTitle": "Rejoindre une session de collaboration en direct sur Creativedraw"
   },
   "errorDialog": {
     "title": "Erreur"
@@ -288,9 +288,9 @@
     "link_title": "Lien partageable",
     "link_details": "Exporter comme un lien en lecture seule.",
     "link_button": "Exporter comme lien",
-    "excalidrawplus_description": "Enregistrer la scène dans votre espace de travail Excalidraw+.",
+    "excalidrawplus_description": "Enregistrer la scène dans votre espace de travail Creativedraw+.",
     "excalidrawplus_button": "Exporter",
-    "excalidrawplus_exportError": "Impossible d'exporter vers Excalidraw+ pour le moment..."
+    "excalidrawplus_exportError": "Impossible d'exporter vers Creativedraw+ pour le moment..."
   },
   "helpDialog": {
     "blog": "Lire notre blog",
@@ -373,8 +373,8 @@
     "removeItemsFromLib": "Enlever les éléments sélectionnés de la bibliothèque"
   },
   "encrypted": {
-    "tooltip": "Vos dessins sont chiffrés de bout en bout, les serveurs d'Excalidraw ne les verront jamais.",
-    "link": "Article de blog sur le chiffrement de bout en bout dans Excalidraw"
+    "tooltip": "Vos dessins sont chiffrés de bout en bout, les serveurs d'Creativedraw ne les verront jamais.",
+    "link": "Article de blog sur le chiffrement de bout en bout dans Creativedraw"
   },
   "stats": {
     "angle": "Angle",
@@ -452,7 +452,7 @@
   "welcomeScreen": {
     "app": {
       "center_heading": "Toutes vos données sont sauvegardées en local dans votre navigateur.",
-      "center_heading_plus": "Vouliez-vous plutôt aller à Excalidraw+ à la place ?",
+      "center_heading_plus": "Vouliez-vous plutôt aller à Creativedraw+ à la place ?",
       "menuHint": "Exportation, préférences, langues, ..."
     },
     "defaults": {
