--- a/src/locales/hi-IN.json
+++ b/src/locales/hi-IN.json
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "लाइब्रेरी जोड़ें पुष्‍टि करें आकार संख्या",
     "imageDoesNotContainScene": "ऐसा लगता है कि इस छवि में कोई दृश्य डेटा नहीं है। क्या आपने निर्यात के दौरान दृश्य एम्बेडिंग अनुमतित की है?",
     "cannotRestoreFromImage": "छवि फ़ाइल बहाल दृश्य नहीं है",
-    "invalidSceneUrl": "दिये गये युआरेल से दृश्य आयात नहीं किया जा सका. यह या तो अनुचित है, या इसमें उचित Excalidraw JSON डेटा नहीं है।",
+    "invalidSceneUrl": "दिये गये युआरेल से दृश्य आयात नहीं किया जा सका. यह या तो अनुचित है, या इसमें उचित Creativedraw JSON डेटा नहीं है।",
     "resetLibrary": "यह पूरा संग्रह रिक्त करेगा. क्या आपको यक़ीन हैं?",
     "removeItemsFromsLibrary": "{{count}} वस्तु(यें) संग्रह से हटायें?",
     "invalidEncryptionKey": "कूटलेखन कुंजी 22 अक्षरों की होनी चाहिये, इसलिये जीवंत सहयोग अक्षम हैं",
@@ -452,7 +452,7 @@
   "welcomeScreen": {
     "app": {
       "center_heading": "आपका सर्व डेटा ब्राउज़र के भीतर स्थानिक जगह पे सुरक्षित किया गया.",
-      "center_heading_plus": "बजाय आपको Excalidraw+ पर जाना है?",
+      "center_heading_plus": "बजाय आपको Creativedraw+ पर जाना है?",
       "menuHint": "निर्यात, पसंद, भाषायें, ..."
     },
     "defaults": {
