--- a/src/locales/lv-LV.json
+++ b/src/locales/lv-LV.json
@@ -44,7 +44,7 @@
     "withBackground": "Fons",
     "exportEmbedScene": "Iegult ainu",
     "exportEmbedScene_details": "Ainas dati tiks iekļauti saglabātajā PNG/SVG datnē, lai no tās būtu iespējams ainu atgūt. Tas palielinās datnes izmēru.",
-    "addWatermark": "Pievienot \"Radīts ar Excalidraw\"",
+    "addWatermark": "Pievienot \"Radīts ar Creativedraw\"",
     "handDrawn": "Rokraksts",
     "normal": "Parasts",
     "code": "Kods",
@@ -77,7 +77,7 @@
     "untitled": "Bez nosaukuma",
     "name": "Vārds",
     "yourName": "Jūsu vārds",
-    "madeWithExcalidraw": "Radīts ar Excalidraw",
+    "madeWithExcalidraw": "Radīts ar Creativedraw",
     "group": "Grupēt atlasīto",
     "ungroup": "Atgrupēt atlasīto",
     "collaborators": "Dalībnieki",
@@ -105,7 +105,7 @@
     "showBackground": "Rādīt fona krāsas atlasītāju",
     "toggleTheme": "Pārslēgt krāsu tēmu",
     "personalLib": "Personīgā bibliotēka",
-    "excalidrawLib": "Excalidraw bibliotēka",
+    "excalidrawLib": "Creativedraw bibliotēka",
     "decreaseFontSize": "Samazināt fonta izmēru",
     "increaseFontSize": "Palielināt fonta izmēru",
     "unbindText": "Atdalīt tekstu",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "Nevar eksportēt tukšu tāfeli.",
     "couldNotCopyToClipboard": "Nevarēja nokopēt starpliktuvē.",
     "decryptFailed": "Nevarēja atšifrēt datus.",
-    "uploadedSecurly": "Augšuplāde nodrošināta ar šifrēšanu no gala līdz galam, kas nozīmē, ka Excalidraw serveri un trešās puses nevar lasīt saturu.",
+    "uploadedSecurly": "Augšuplāde nodrošināta ar šifrēšanu no gala līdz galam, kas nozīmē, ka Creativedraw serveri un trešās puses nevar lasīt saturu.",
     "loadSceneOverridePrompt": "Ārēja satura ielāde aizstās jūsu pašreizējo saturu. Vai vēlaties turpināt?",
     "collabStopOverridePrompt": "Sesijas pārtraukšana pārrakstīs jūsu iepriekšējo zīmējumu, kas saglabāts jūsu pārlūkā. Vai turpināt?\n\n(Ja vēlaties paturēt zīmējumu, kas saglabāts jūsu pārlūkā, vienkārši aizveriet pārlūka cilni.)",
     "errorAddingToLibrary": "Nevarēja pievienot vienumu bibliotēkai",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "Šī funkcija pievienos {{numShapes}} formu(-as) jūsu bibliotēkai. Vai turpināt?",
     "imageDoesNotContainScene": "Šķiet, ka attēls nesatur ainas datus. Vai iespējojāt ainas iegulšanu, kad eksportējāt?",
     "cannotRestoreFromImage": "Ainu nevarēja atgūt no attēla datnes",
-    "invalidSceneUrl": "Nevarēja importēt ainu no norādītā URL. Vai nu tas ir nederīgs, vai nesatur derīgus Excalidraw JSON datus.",
+    "invalidSceneUrl": "Nevarēja importēt ainu no norādītā URL. Vai nu tas ir nederīgs, vai nesatur derīgus Creativedraw JSON datus.",
     "resetLibrary": "Šī funkcija iztukšos bibliotēku. Vai turpināt?",
     "removeItemsFromsLibrary": "Vai izņemt {{count}} vienumu(s) no bibliotēkas?",
     "invalidEncryptionKey": "Šifrēšanas atslēgai jābūt 22 simbolus garai. Tiešsaistes sadarbība ir izslēgta.",
@@ -276,7 +276,7 @@
     "desc_inProgressIntro": "Notiek tiešsaistes sadarbības sesija.",
     "desc_shareLink": "Dalieties ar šo saiti ar jebkuru, ar ko vēlaties sadarboties:",
     "desc_exitSession": "Sesijas beigšana jūs atvienos no sadarbošanās, bet jūs vēl joprojām varēsiet strādāt ar ainu savā datorā. Ievērojiet, ka šis neietekmēs citus dalībniekus, un viņi vēl joprojām varēs sadarboties savā ainas versijā.",
-    "shareTitle": "Pievienoties tiešsaistes sadarbībai programmā Excalidraw"
+    "shareTitle": "Pievienoties tiešsaistes sadarbībai programmā Creativedraw"
   },
   "errorDialog": {
     "title": "Kļūda"
@@ -288,9 +288,9 @@
     "link_title": "Kopīgošanas saite",
     "link_details": "Eksportēt kā tikai lasāmu saiti.",
     "link_button": "Eksportēt kā saiti",
-    "excalidrawplus_description": "Saglabāt ainu savā Excalidraw+ darbvietā.",
+    "excalidrawplus_description": "Saglabāt ainu savā Creativedraw+ darbvietā.",
     "excalidrawplus_button": "Eksportēt",
-    "excalidrawplus_exportError": "Pašreiz nevarēja eksportēt uz Excalidraw+..."
+    "excalidrawplus_exportError": "Pašreiz nevarēja eksportēt uz Creativedraw+..."
   },
   "helpDialog": {
     "blog": "Lasīt mūsu blogu",
@@ -373,8 +373,8 @@
     "removeItemsFromLib": "Noņemt atlasītos vienumus no bibliotēkas"
   },
   "encrypted": {
-    "tooltip": "Jūsu zīmējumi ir šifrēti no gala līdz galam; līdz ar to Excalidraw serveri tos nekad neredzēs.",
-    "link": "Ieraksts par šifrēšanu no gala līdz galam Excalidraw blogā"
+    "tooltip": "Jūsu zīmējumi ir šifrēti no gala līdz galam; līdz ar to Creativedraw serveri tos nekad neredzēs.",
+    "link": "Ieraksts par šifrēšanu no gala līdz galam Creativedraw blogā"
   },
   "stats": {
     "angle": "Leņķis",
