--- a/src/locales/nb-NO.json
+++ b/src/locales/nb-NO.json
@@ -44,7 +44,7 @@
     "withBackground": "Bakgrunn",
     "exportEmbedScene": "Bygg inn scene",
     "exportEmbedScene_details": "Scenedata vil bli lagret i den eksporterte PNG/SVG-filen, slik at scenen kan gjenopprettes fra den.\nDet vil øke den eksporterte filstørrelsen.",
-    "addWatermark": "Legg til \"Laget med Excalidraw\"",
+    "addWatermark": "Legg til \"Laget med Creativedraw\"",
     "handDrawn": "Håndtegnet",
     "normal": "Normal",
     "code": "Kode",
@@ -77,7 +77,7 @@
     "untitled": "Uten navn",
     "name": "Navn",
     "yourName": "Ditt navn",
-    "madeWithExcalidraw": "Laget med Excalidraw",
+    "madeWithExcalidraw": "Laget med Creativedraw",
     "group": "Gruppér utvalg",
     "ungroup": "Avgruppér utvalg",
     "collaborators": "Samarbeidspartnere",
@@ -105,7 +105,7 @@
     "showBackground": "Vis fargevelger for bakgrunnsfarge",
     "toggleTheme": "Veksle tema",
     "personalLib": "Personlig bibliotek",
-    "excalidrawLib": "Excalidraw-bibliotek",
+    "excalidrawLib": "Creativedraw-bibliotek",
     "decreaseFontSize": "Reduser skriftstørrelse",
     "increaseFontSize": "Øk skriftstørrelse",
     "unbindText": "Avbind tekst",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "Kan ikke eksportere et tomt lerret.",
     "couldNotCopyToClipboard": "Kunne ikke kopiere til utklippstavlen.",
     "decryptFailed": "Kunne ikke dekryptere data.",
-    "uploadedSecurly": "Opplastingen er kryptert og kan ikke leses av Excalidraw-serveren eller tredjeparter.",
+    "uploadedSecurly": "Opplastingen er kryptert og kan ikke leses av Creativedraw-serveren eller tredjeparter.",
     "loadSceneOverridePrompt": "Å laste inn ekstern tegning vil erstatte det eksisterende innholdet. Ønsker du å fortsette?",
     "collabStopOverridePrompt": "Hvis du slutter økten, overskrives din forrige, lokalt lagrede tegning. Er du sikker?\n\n(Hvis du ønsker å beholde din lokale tegning, bare lukk nettleserfanen i stedet.)",
     "errorAddingToLibrary": "Kunne ikke legge element i biblioteket",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "Dette vil legge til {{numShapes}} figur(er) i biblioteket ditt. Er du sikker?",
     "imageDoesNotContainScene": "Det ser ikke ut til at dette bildet inneholder noen scenedata. Har du aktivert innebygging av scene under eksporten?",
     "cannotRestoreFromImage": "Scenen kunne ikke gjenopprettes fra denne bildefilen",
-    "invalidSceneUrl": "Kunne ikke importere scene fra den oppgitte URL-en. Den er enten ødelagt, eller inneholder ikke gyldig Excalidraw JSON-data.",
+    "invalidSceneUrl": "Kunne ikke importere scene fra den oppgitte URL-en. Den er enten ødelagt, eller inneholder ikke gyldig Creativedraw JSON-data.",
     "resetLibrary": "Dette vil tømme biblioteket ditt. Er du sikker?",
     "removeItemsFromsLibrary": "Slett {{count}} element(er) fra biblioteket?",
     "invalidEncryptionKey": "Krypteringsnøkkel må ha 22 tegn. Live-samarbeid er deaktivert.",
@@ -276,7 +276,7 @@
     "desc_inProgressIntro": "Sanntids-samarbeidsøkt er nå i gang.",
     "desc_shareLink": "Del denne linken med de du vil samarbeide med:",
     "desc_exitSession": "Dersom du avslutter sesjonen blir du frakoblet rommet, men du kan fortsette å arbeide med scenen lokalt. Vær oppmerksom på at dette ikke vil påvirke andre personer, og de vil fortsatt ha mulighet til å samarbeide på deres versjon.",
-    "shareTitle": "Bli med i en live samarbeidsøkt på Excalidraw"
+    "shareTitle": "Bli med i en live samarbeidsøkt på Creativedraw"
   },
   "errorDialog": {
     "title": "Feil"
@@ -288,9 +288,9 @@
     "link_title": "Delbar lenke",
     "link_details": "Eksporter som en skrivebeskyttet lenke.",
     "link_button": "Eksporter til lenke",
-    "excalidrawplus_description": "Lagre scenen til ditt Excalidraw+ arbeidsområde.",
+    "excalidrawplus_description": "Lagre scenen til ditt Creativedraw+ arbeidsområde.",
     "excalidrawplus_button": "Eksporter",
-    "excalidrawplus_exportError": "Kunne ikke eksportere til Excalidraw+ for øyeblikket..."
+    "excalidrawplus_exportError": "Kunne ikke eksportere til Creativedraw+ for øyeblikket..."
   },
   "helpDialog": {
     "blog": "Les bloggen vår",
@@ -373,8 +373,8 @@
     "removeItemsFromLib": "Fjern valgte elementer fra bibliotek"
   },
   "encrypted": {
-    "tooltip": "Dine tegninger er ende-til-ende-krypterte slik at Excalidraw sine servere aldri vil se dem.",
-    "link": "Blogginnlegg om ende-til-ende-kryptering i Excalidraw"
+    "tooltip": "Dine tegninger er ende-til-ende-krypterte slik at Creativedraw sine servere aldri vil se dem.",
+    "link": "Blogginnlegg om ende-til-ende-kryptering i Creativedraw"
   },
   "stats": {
     "angle": "Vinkel",
@@ -452,7 +452,7 @@
   "welcomeScreen": {
     "app": {
       "center_heading": "Alle dine data lagres lokalt i din nettleser.",
-      "center_heading_plus": "Ønsker du å gå til Excalidraw+ i stedet?",
+      "center_heading_plus": "Ønsker du å gå til Creativedraw+ i stedet?",
       "menuHint": "Eksporter, innstillinger, språk, ..."
     },
     "defaults": {
