--- a/src/locales/ru-RU.json
+++ b/src/locales/ru-RU.json
@@ -44,7 +44,7 @@
     "withBackground": "Фон",
     "exportEmbedScene": "Встроить сцену",
     "exportEmbedScene_details": "Сцена будет сохранена в PNG/SVG файл так, чтобы всю сцену можно будет восстановить из этого файла. Это увеличит размер файла.",
-    "addWatermark": "Добавить «Создано в Excalidraw»",
+    "addWatermark": "Добавить «Создано в Creativedraw»",
     "handDrawn": "От руки",
     "normal": "Обычный",
     "code": "Код",
@@ -77,7 +77,7 @@
     "untitled": "Безымянный",
     "name": "Имя",
     "yourName": "Ваше имя",
-    "madeWithExcalidraw": "Сделано в Excalidraw",
+    "madeWithExcalidraw": "Сделано в Creativedraw",
     "group": "Сгруппировать выделение",
     "ungroup": "Разделить выделение",
     "collaborators": "Участники",
@@ -105,7 +105,7 @@
     "showBackground": "Показать выбор цвета фона",
     "toggleTheme": "Переключить тему",
     "personalLib": "Личная библиотека",
-    "excalidrawLib": "Библиотека Excalidraw",
+    "excalidrawLib": "Библиотека Creativedraw",
     "decreaseFontSize": "Уменьшить шрифт",
     "increaseFontSize": "Увеличить шрифт",
     "unbindText": "Отвязать текст",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "Не может экспортировать пустой холст.",
     "couldNotCopyToClipboard": "Не удалось скопировать в буфер обмена.",
     "decryptFailed": "Не удалось расшифровать данные.",
-    "uploadedSecurly": "Загружаемые данные защищена сквозным шифрованием, что означает, что сервер Excalidraw и третьи стороны не могут прочитать содержимое.",
+    "uploadedSecurly": "Загружаемые данные защищена сквозным шифрованием, что означает, что сервер Creativedraw и третьи стороны не могут прочитать содержимое.",
     "loadSceneOverridePrompt": "Загрузка рисунка приведёт к замене имеющегося содержимого. Вы хотите продолжить?",
     "collabStopOverridePrompt": "Остановка сессии перезапишет ваш предыдущий, локально сохранённый рисунок. Вы уверены? \n\n(Если вы хотите оставить ваш локальный рисунок, просто закройте вкладку браузера)",
     "errorAddingToLibrary": "Не удалось добавить объект в библиотеку",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "Будет добавлено {{numShapes}} фигур в вашу библиотеку. Продолжить?",
     "imageDoesNotContainScene": "Это изображение не содержит данных сцены. Вы включили встраивание сцены во время экспорта?",
     "cannotRestoreFromImage": "Сцена не может быть восстановлена из этого изображения",
-    "invalidSceneUrl": "Невозможно импортировать сцену с предоставленного URL. Неверный формат, или не содержит верных Excalidraw JSON данных.",
+    "invalidSceneUrl": "Невозможно импортировать сцену с предоставленного URL. Неверный формат, или не содержит верных Creativedraw JSON данных.",
     "resetLibrary": "Это очистит вашу библиотеку. Вы уверены?",
     "removeItemsFromsLibrary": "Удалить {{count}} объект(ов) из библиотеки?",
     "invalidEncryptionKey": "Ключ шифрования должен состоять из 22 символов. Одновременное редактирование отключено.",
@@ -276,7 +276,7 @@
     "desc_inProgressIntro": "Сеанс совместной работы запущен.",
     "desc_shareLink": "Поделитесь этой ссылкой со всеми участниками:",
     "desc_exitSession": "Завершив сеанс, вы выйдете из комнаты, но сможете продолжить работать с документом локально. Это не повлияет на работу других пользователей — они смогут продолжить совместную работу с их версией документа.",
-    "shareTitle": "Присоединиться к активной совместной сессии на Excalidraw"
+    "shareTitle": "Присоединиться к активной совместной сессии на Creativedraw"
   },
   "errorDialog": {
     "title": "Ошибка"
@@ -288,9 +288,9 @@
     "link_title": "Поделитесь ссылкой",
     "link_details": "Экспорт ссылки только для чтения.",
     "link_button": "Экспорт в ссылку",
-    "excalidrawplus_description": "Сохраните сцену в ваше рабочее пространство Excalidraw+.",
+    "excalidrawplus_description": "Сохраните сцену в ваше рабочее пространство Creativedraw+.",
     "excalidrawplus_button": "Экспорт",
-    "excalidrawplus_exportError": "Не удалось экспортировать в Excalidraw+ на данный момент..."
+    "excalidrawplus_exportError": "Не удалось экспортировать в Creativedraw+ на данный момент..."
   },
   "helpDialog": {
     "blog": "Прочитайте наш блог",
@@ -373,8 +373,8 @@
     "removeItemsFromLib": "Удалить выбранные объекты из библиотеки"
   },
   "encrypted": {
-    "tooltip": "Ваши данные защищены сквозным (End-to-end) шифрованием. Серверы Excalidraw никогда не получат доступ к ним.",
-    "link": "Запись блога о сквозном шифровании в Excalidraw"
+    "tooltip": "Ваши данные защищены сквозным (End-to-end) шифрованием. Серверы Creativedraw никогда не получат доступ к ним.",
+    "link": "Запись блога о сквозном шифровании в Creativedraw"
   },
   "stats": {
     "angle": "Угол",
@@ -452,7 +452,7 @@
   "welcomeScreen": {
     "app": {
       "center_heading": "Все ваши данные сохраняются локально в вашем браузере.",
-      "center_heading_plus": "Хотите перейти на Excalidraw+?",
+      "center_heading_plus": "Хотите перейти на Creativedraw+?",
       "menuHint": "Экспорт, настройки, языки, ..."
     },
     "defaults": {
