--- a/src/locales/vi-VN.json
+++ b/src/locales/vi-VN.json
@@ -44,7 +44,7 @@
     "withBackground": "Nền",
     "exportEmbedScene": "",
     "exportEmbedScene_details": "",
-    "addWatermark": "Làm với Excalidraw\"",
+    "addWatermark": "Làm với Creativedraw\"",
     "handDrawn": "Vẽ tay",
     "normal": "Bình thường",
     "code": "Mã",
@@ -77,7 +77,7 @@
     "untitled": "Không có tiêu đề",
     "name": "Tên",
     "yourName": "Tên của bạn",
-    "madeWithExcalidraw": "Làm với Excalidraw",
+    "madeWithExcalidraw": "Làm với Creativedraw",
     "group": "",
     "ungroup": "",
     "collaborators": "Cộng tác viên",
