--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -44,7 +44,7 @@
     "withBackground": "背景",
     "exportEmbedScene": "包含画布数据",
     "exportEmbedScene_details": "画布数据将被保存到导出的 PNG/SVG 文件，以便恢复。\n将会增加导出的文件大小。",
-    "addWatermark": "添加 “使用 Excalidraw 创建” 水印",
+    "addWatermark": "添加 “使用 Creativedraw 创建” 水印",
     "handDrawn": "手写",
     "normal": "普通",
     "code": "代码",
@@ -77,7 +77,7 @@
     "untitled": "无标题",
     "name": "名字",
     "yourName": "您的姓名",
-    "madeWithExcalidraw": "使用 Excalidraw 创建",
+    "madeWithExcalidraw": "使用 Creativedraw 创建",
     "group": "编组",
     "ungroup": "解除编组",
     "collaborators": "协作者",
@@ -105,7 +105,7 @@
     "showBackground": "显示背景颜色选择器",
     "toggleTheme": "切换主题",
     "personalLib": "个人素材库",
-    "excalidrawLib": "Excalidraw 素材库",
+    "excalidrawLib": "Creativedraw 素材库",
     "decreaseFontSize": "缩小字体大小",
     "increaseFontSize": "放大字体大小",
     "unbindText": "取消文本绑定",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "无法导出空白画布。",
     "couldNotCopyToClipboard": "无法复制到剪贴板。",
     "decryptFailed": "无法解密数据。",
-    "uploadedSecurly": "上传已被端到端加密保护，这意味着 Excalidraw 的服务器和第三方都无法读取内容。",
+    "uploadedSecurly": "上传已被端到端加密保护，这意味着 Creativedraw 的服务器和第三方都无法读取内容。",
     "loadSceneOverridePrompt": "加载外部绘图将取代您现有的内容。您想要继续吗？",
     "collabStopOverridePrompt": "停止会话将覆盖您先前本地存储的绘图。 您确定吗？\n\n(如果您想保持本地绘图，只需关闭浏览器选项卡。)",
     "errorAddingToLibrary": "无法将项目添加到素材库中",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "这将添加 {{numShapes}} 个形状到您的素材库中。您确定吗？",
     "imageDoesNotContainScene": "此图像似乎不包含任何画布数据。您是否在导出时启用了画布嵌入功能？",
     "cannotRestoreFromImage": "无法从此图像文件恢复画布",
-    "invalidSceneUrl": "无法从提供的 URL 导入场景。它或者格式不正确，或者不包含有效的 Excalidraw JSON 数据。",
+    "invalidSceneUrl": "无法从提供的 URL 导入场景。它或者格式不正确，或者不包含有效的 Creativedraw JSON 数据。",
     "resetLibrary": "这将会清除你的素材库。你确定要这么做吗？",
     "removeItemsFromsLibrary": "确定要从素材库中删除 {{count}} 个项目吗？",
     "invalidEncryptionKey": "密钥必须包含22个字符。实时协作已被禁用。",
@@ -276,7 +276,7 @@
     "desc_inProgressIntro": "实时协作会议正在进行。",
     "desc_shareLink": "分享此链接给你要协作的用户",
     "desc_exitSession": "停止会话将中断您在与房间的连接，但您依然可以在本地继续使用画布. 请注意，这不会影响到其他用户, 他们仍可以在他们的版本上继续协作。",
-    "shareTitle": "加入 Excalidraw 实时协作会议"
+    "shareTitle": "加入 Creativedraw 实时协作会议"
   },
   "errorDialog": {
     "title": "错误"
@@ -288,9 +288,9 @@
     "link_title": "分享链接",
     "link_details": "导出为只读链接。",
     "link_button": "导出链接",
-    "excalidrawplus_description": "将画布保存到您的 Excalidraw+ 工作区。",
+    "excalidrawplus_description": "将画布保存到您的 Creativedraw+ 工作区。",
     "excalidrawplus_button": "导出",
-    "excalidrawplus_exportError": "暂时无法导出到 Excalidraw+ ..."
+    "excalidrawplus_exportError": "暂时无法导出到 Creativedraw+ ..."
   },
   "helpDialog": {
     "blog": "浏览我们的博客",
@@ -374,7 +374,7 @@
   },
   "encrypted": {
     "tooltip": "您的绘图采用的端到端加密，其内容对于Excalidraw服务器是不可见的。",
-    "link": "Excalidraw 中关于端到端加密的博客"
+    "link": "Creativedraw 中关于端到端加密的博客"
   },
   "stats": {
     "angle": "角度",
@@ -452,7 +452,7 @@
   "welcomeScreen": {
     "app": {
       "center_heading": "您的所有数据都储存在浏览器本地。",
-      "center_heading_plus": "是否前往 Excalidraw+ ？",
+      "center_heading_plus": "是否前往 Creativedraw+ ？",
       "menuHint": "导出、首选项、语言……"
     },
     "defaults": {
