--- a/src/locales/da-DK.json
+++ b/src/locales/da-DK.json
@@ -44,7 +44,7 @@
     "withBackground": "Baggrund",
     "exportEmbedScene": "Indlejr scene",
     "exportEmbedScene_details": "Scene data vil blive gemt i den eksporterede PNG/SVG-fil, så scenen kan gendannes fra den.\nDette vil øge den eksporterede filstørrelse.",
-    "addWatermark": "Tilføj \"Lavet med Excalidraw\"",
+    "addWatermark": "Tilføj \"Lavet med Creativedraw\"",
     "handDrawn": "Hånd-tegnet",
     "normal": "Normal",
     "code": "Kode",
@@ -77,7 +77,7 @@
     "untitled": "Unavngivet",
     "name": "Navn",
     "yourName": "Dit navn",
-    "madeWithExcalidraw": "Fremstillet med Excalidraw",
+    "madeWithExcalidraw": "Fremstillet med Creativedraw",
     "group": "",
     "ungroup": "",
     "collaborators": "",
