--- a/src/locales/it-IT.json
+++ b/src/locales/it-IT.json
@@ -44,7 +44,7 @@
     "withBackground": "Sfondo",
     "exportEmbedScene": "Includi scena",
     "exportEmbedScene_details": "I dati della scena saranno salvati nel file PNG/SVG esportato in modo che la scena possa essere ripristinata da esso.\nQuesto aumenterà la dimensione del file esportato.",
-    "addWatermark": "Aggiungi \"Creato con Excalidraw\"",
+    "addWatermark": "Aggiungi \"Creato con Creativedraw\"",
     "handDrawn": "A mano libera",
     "normal": "Normale",
     "code": "Codice",
@@ -77,7 +77,7 @@
     "untitled": "Senza titolo",
     "name": "Nome",
     "yourName": "Il vostro nome",
-    "madeWithExcalidraw": "Creato con Excalidraw",
+    "madeWithExcalidraw": "Creato con Creativedraw",
     "group": "Crea gruppo da selezione",
     "ungroup": "Dividi gruppo da selezione",
     "collaborators": "Collaboratori",
@@ -105,7 +105,7 @@
     "showBackground": "Mostra selettore colore di sfondo",
     "toggleTheme": "Cambia tema",
     "personalLib": "Libreria Personale",
-    "excalidrawLib": "Libreria di Excalidraw",
+    "excalidrawLib": "Libreria di Creativedraw",
     "decreaseFontSize": "Riduci dimensione dei caratteri",
     "increaseFontSize": "Aumenta la dimensione dei caratteri",
     "unbindText": "Scollega testo",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "Non è possibile esportare una tela vuota.",
     "couldNotCopyToClipboard": "Impossibile copiare negli appunti.",
     "decryptFailed": "Impossibile decriptare i dati.",
-    "uploadedSecurly": "L'upload è stato protetto con la crittografia end-to-end, il che significa che il server Excalidraw e terze parti non possono leggere il contenuto.",
+    "uploadedSecurly": "L'upload è stato protetto con la crittografia end-to-end, il che significa che il server Creativedraw e terze parti non possono leggere il contenuto.",
     "loadSceneOverridePrompt": "Se carichi questo disegno esterno, sostituirà quello che hai. Vuoi continuare?",
     "collabStopOverridePrompt": "Interrompere la sessione sovrascriverà il precedente disegno memorizzato localmente. Sei sicuro?\n\n(Se vuoi mantenere il tuo disegno locale, chiudi semplicemente la scheda del browser.)",
     "errorAddingToLibrary": "Impossibile aggiungere l'elemento alla libreria",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "Questo aggiungerà {{numShapes}} forma(e) alla tua libreria. Sei sicuro?",
     "imageDoesNotContainScene": "Questa immagine pare non contenere alcuna scena. Avevi incluso la scena durante l'esportazione?",
     "cannotRestoreFromImage": "Impossibile ripristinare la scena da questo file immagine",
-    "invalidSceneUrl": "Impossibile importare la scena dall'URL fornito. Potrebbe essere malformato o non contenere dati JSON Excalidraw validi.",
+    "invalidSceneUrl": "Impossibile importare la scena dall'URL fornito. Potrebbe essere malformato o non contenere dati JSON Creativedraw validi.",
     "resetLibrary": "Questa azione cancellerà l'intera libreria. Sei sicuro?",
     "removeItemsFromsLibrary": "Eliminare {{count}} elementi dalla libreria?",
     "invalidEncryptionKey": "La chiave di cifratura deve essere composta da 22 caratteri. La collaborazione live è disabilitata.",
@@ -276,7 +276,7 @@
     "desc_inProgressIntro": "La sessione di collaborazione è attualmente in corso.",
     "desc_shareLink": "Condividi questo link con chiunque desideri collaborare:",
     "desc_exitSession": "Interrompere la sessione scollegherà la tua stanza ma potrai continuare a lavorare con la scena, localmente. Tieni presente che questo non influirà sulle altre persone, e che saranno ancora in grado di collaborare alla loro versione.",
-    "shareTitle": "Partecipa a una sessione di collaborazione live su Excalidraw"
+    "shareTitle": "Partecipa a una sessione di collaborazione live su Creativedraw"
   },
   "errorDialog": {
     "title": "Errore"
@@ -288,9 +288,9 @@
     "link_title": "Link condivisibile",
     "link_details": "Esporta come link di sola lettura.",
     "link_button": "Esporta come Link",
-    "excalidrawplus_description": "Salva la scena nel tuo spazio di lavoro Excalidraw+.",
+    "excalidrawplus_description": "Salva la scena nel tuo spazio di lavoro Creativedraw+.",
     "excalidrawplus_button": "Esporta",
-    "excalidrawplus_exportError": "Non è stato possibile esportare su Excalidraw+ al questo momento..."
+    "excalidrawplus_exportError": "Non è stato possibile esportare su Creativedraw+ al questo momento..."
   },
   "helpDialog": {
     "blog": "Leggi il nostro blog",
@@ -373,8 +373,8 @@
     "removeItemsFromLib": "Rimuovi gli elementi selezionati dalla libreria"
   },
   "encrypted": {
-    "tooltip": "I tuoi disegni sono crittografati end-to-end in modo che i server di Excalidraw non li possano mai vedere.",
-    "link": "Articolo del blog sulla crittografia end-to-end di Excalidraw"
+    "tooltip": "I tuoi disegni sono crittografati end-to-end in modo che i server di Creativedraw non li possano mai vedere.",
+    "link": "Articolo del blog sulla crittografia end-to-end di Creativedraw"
   },
   "stats": {
     "angle": "Angolo",
@@ -452,7 +452,7 @@
   "welcomeScreen": {
     "app": {
       "center_heading": "Tutti i tuoi dati sono salvati localmente nel browser.",
-      "center_heading_plus": "Volevi invece andare su Excalidraw+?",
+      "center_heading_plus": "Volevi invece andare su Creativedraw+?",
       "menuHint": "Esporta, preferenze, lingue, ..."
     },
     "defaults": {
