--- a/src/locales/ko-KR.json
+++ b/src/locales/ko-KR.json
@@ -44,7 +44,7 @@
     "withBackground": "배경",
     "exportEmbedScene": "화면을 담기",
     "exportEmbedScene_details": "화면 정보가 내보내는 PNG/SVG 파일에 저장되어 이후에 파일에서 화면을 복구할 수 있습니다. 파일 크기가 증가합니다.",
-    "addWatermark": "\"Made with Excalidraw\" 추가",
+    "addWatermark": "\"Made with Creativedraw\" 추가",
     "handDrawn": "손글씨",
     "normal": "일반",
     "code": "코드",
@@ -77,7 +77,7 @@
     "untitled": "제목 없음",
     "name": "이름",
     "yourName": "이름 입력",
-    "madeWithExcalidraw": "Made with Excalidraw",
+    "madeWithExcalidraw": "Made with Creativedraw",
     "group": "그룹 생성",
     "ungroup": "그룹 해제",
     "collaborators": "공동 작업자",
@@ -105,7 +105,7 @@
     "showBackground": "배경 색상 선택기 열기",
     "toggleTheme": "테마 전환",
     "personalLib": "개인 라이브러리",
-    "excalidrawLib": "Excalidraw 라이브러리",
+    "excalidrawLib": "Creativedraw 라이브러리",
     "decreaseFontSize": "폰트 사이즈 줄이기",
     "increaseFontSize": "폰트 사이즈 키우기",
     "unbindText": "텍스트 분리",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "빈 캔버스를 내보낼 수 없습니다.",
     "couldNotCopyToClipboard": "클립보드로 복사하지 못했습니다.",
     "decryptFailed": "데이터를 복호화하지 못했습니다.",
-    "uploadedSecurly": "업로드는 종단 간 암호화로 보호되므로 Excalidraw 서버 및 타사가 콘텐츠를 읽을 수 없습니다.",
+    "uploadedSecurly": "업로드는 종단 간 암호화로 보호되므로 Creativedraw 서버 및 타사가 콘텐츠를 읽을 수 없습니다.",
     "loadSceneOverridePrompt": "외부 파일을 불러 오면 기존 콘텐츠가 대체됩니다. 계속 진행할까요?",
     "collabStopOverridePrompt": "협업 세션을 종료하면 로컬 저장소에 있는 그림이 협업 세션의 그림으로 대체됩니다. 진행하겠습니까?\n\n(로컬 저장소에 있는 그림을 유지하려면 현재 브라우저 탭을 닫아주세요.)",
     "errorAddingToLibrary": "아이템을 라이브러리에 추가 할수 없습니다",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "{{numShapes}}개의 모양이 라이브러리에 추가됩니다. 계속하시겠어요?",
     "imageDoesNotContainScene": "이 이미지는 화면 데이터를 포함하고 있지 않은 것 같습니다. 내보낼 때 화면을 첨부하도록 설정하셨나요?",
     "cannotRestoreFromImage": "이미지 파일에서 화면을 복구할 수 없었습니다",
-    "invalidSceneUrl": "제공된 URL에서 화면을 가져오는데 실패했습니다. 주소가 잘못되거나, 유효한 Excalidraw JSON 데이터를 포함하고 있지 않은 것일 수 있습니다.",
+    "invalidSceneUrl": "제공된 URL에서 화면을 가져오는데 실패했습니다. 주소가 잘못되거나, 유효한 Creativedraw JSON 데이터를 포함하고 있지 않은 것일 수 있습니다.",
     "resetLibrary": "당신의 라이브러리를 초기화 합니다. 계속하시겠습니까?",
     "removeItemsFromsLibrary": "{{count}}개의 아이템을 라이브러리에서 삭제하시겠습니까?",
     "invalidEncryptionKey": "암호화 키는 반드시 22글자여야 합니다. 실시간 협업이 비활성화됩니다.",
@@ -288,9 +288,9 @@
     "link_title": "공유 가능한 링크 생성",
     "link_details": "읽기 전용 링크로 내보냅니다.",
     "link_button": "링크로 내보내기",
-    "excalidrawplus_description": "화면을 당신의 Excalidraw+ 작업 공간으로 저장합니다.",
+    "excalidrawplus_description": "화면을 당신의 Creativedraw+ 작업 공간으로 저장합니다.",
     "excalidrawplus_button": "내보내기",
-    "excalidrawplus_exportError": "지금은 Excalidraw+로 내보낼 수 없습니다..."
+    "excalidrawplus_exportError": "지금은 Creativedraw+로 내보낼 수 없습니다..."
   },
   "helpDialog": {
     "blog": "블로그 읽어보기",
@@ -452,7 +452,7 @@
   "welcomeScreen": {
     "app": {
       "center_heading": "당신의 모든 데이터는 브라우저에 저장되었습니다.",
-      "center_heading_plus": "대신 Excalidraw+로 이동하시겠습니까?",
+      "center_heading_plus": "대신 Creativedraw+로 이동하시겠습니까?",
       "menuHint": "내보내기, 설정, 언어, ..."
     },
     "defaults": {
