--- a/src/locales/pt-BR.json
+++ b/src/locales/pt-BR.json
@@ -44,7 +44,7 @@
     "withBackground": "Fundo",
     "exportEmbedScene": "Incorporar cena",
     "exportEmbedScene_details": "Os dados da cena serão salvos no arquivo PNG/SVG exportado para que a cena possa ser restaurada.\nIrá aumentar o tamanho do arquivo exportado.",
-    "addWatermark": "Adicionar \"Feito com Excalidraw\"",
+    "addWatermark": "Adicionar \"Feito com Creativedraw\"",
     "handDrawn": "Manuscrito",
     "normal": "Normal",
     "code": "Código",
@@ -77,7 +77,7 @@
     "untitled": "Sem título",
     "name": "Nome",
     "yourName": "Seu nome",
-    "madeWithExcalidraw": "Feito com Excalidraw",
+    "madeWithExcalidraw": "Feito com Creativedraw",
     "group": "Agrupar seleção",
     "ungroup": "Desagrupar seleção",
     "collaborators": "Colaboradores",
@@ -105,7 +105,7 @@
     "showBackground": "Exibir seletor de cores do fundo",
     "toggleTheme": "Alternar tema",
     "personalLib": "Biblioteca Pessoal",
-    "excalidrawLib": "Biblioteca do Excalidraw",
+    "excalidrawLib": "Biblioteca do Creativedraw",
     "decreaseFontSize": "Diminuir o tamanho da fonte",
     "increaseFontSize": "Aumentar o tamanho da fonte",
     "unbindText": "Desvincular texto",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "Não é possível exportar um canvas vazio.",
     "couldNotCopyToClipboard": "Não foi possível copiar para a área de transferência.",
     "decryptFailed": "Não foi possível descriptografar os dados.",
-    "uploadedSecurly": "O upload foi protegido com criptografia de ponta a ponta, o que significa que o servidor do Excalidraw e terceiros não podem ler o conteúdo.",
+    "uploadedSecurly": "O upload foi protegido com criptografia de ponta a ponta, o que significa que o servidor do Creativedraw e terceiros não podem ler o conteúdo.",
     "loadSceneOverridePrompt": "Carregar um desenho externo substituirá o seu conteúdo existente. Deseja continuar?",
     "collabStopOverridePrompt": "Ao interromper a sessão, você substituirá seu desenho anterior, armazenado localmente. Você tem certeza?\n\n(Se você deseja manter seu desenho local, simplesmente feche a aba do navegador.)",
     "errorAddingToLibrary": "Não foi possível adicionar o item à biblioteca",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "Isso adicionará {{numShapes}} forma(s) à sua biblioteca. Tem certeza?",
     "imageDoesNotContainScene": "Esta imagem parece não conter dados de cenas. Você ativou a incorporação da cena durante a exportação?",
     "cannotRestoreFromImage": "Não foi possível restaurar a cena deste arquivo de imagem",
-    "invalidSceneUrl": "Não foi possível importar a cena da URL fornecida. Ela está incompleta ou não contém dados JSON válidos do Excalidraw.",
+    "invalidSceneUrl": "Não foi possível importar a cena da URL fornecida. Ela está incompleta ou não contém dados JSON válidos do Creativedraw.",
     "resetLibrary": "Isto limpará a sua biblioteca. Você tem certeza?",
     "removeItemsFromsLibrary": "Excluir {{count}} item(ns) da biblioteca?",
     "invalidEncryptionKey": "A chave de encriptação deve ter 22 caracteres. A colaboração ao vivo está desabilitada.",
@@ -276,7 +276,7 @@
     "desc_inProgressIntro": "A sessão de colaboração ao vivo está agora em andamento.",
     "desc_shareLink": "Compartilhe este link com qualquer pessoa com quem você queira colaborar:",
     "desc_exitSession": "Interrompendo a sessão você irá se desconectar da sala, mas você poderá continuar trabalhando com a cena localmente. Observe que isso não afetará outras pessoas, e elas ainda poderão colaborar em suas versões.",
-    "shareTitle": "Participe de uma sessão ao vivo de colaboração no Excalidraw"
+    "shareTitle": "Participe de uma sessão ao vivo de colaboração no Creativedraw"
   },
   "errorDialog": {
     "title": "Erro"
@@ -288,9 +288,9 @@
     "link_title": "Link compartilhável",
     "link_details": "Exportar como link de apenas leitura.",
     "link_button": "Exportar link",
-    "excalidrawplus_description": "Salvar a cena na sua área de trabalho Excalidraw+.",
+    "excalidrawplus_description": "Salvar a cena na sua área de trabalho Creativedraw+.",
     "excalidrawplus_button": "Exportar",
-    "excalidrawplus_exportError": "Não é possível exportar para o Excalidraw+ neste momento..."
+    "excalidrawplus_exportError": "Não é possível exportar para o Creativedraw+ neste momento..."
   },
   "helpDialog": {
     "blog": "Leia o nosso blog",
@@ -373,8 +373,8 @@
     "removeItemsFromLib": "Remover itens selecionados da biblioteca"
   },
   "encrypted": {
-    "tooltip": "Seus desenhos são criptografados de ponta a ponta, então os servidores do Excalidraw nunca os verão.",
-    "link": "Publicação de blog com criptografia de ponta a ponta no Excalidraw"
+    "tooltip": "Seus desenhos são criptografados de ponta a ponta, então os servidores do Creativedraw nunca os verão.",
+    "link": "Publicação de blog com criptografia de ponta a ponta no Creativedraw"
   },
   "stats": {
     "angle": "Ângulo",
@@ -452,7 +452,7 @@
   "welcomeScreen": {
     "app": {
       "center_heading": "Todos os dados são salvos localmente no seu navegador.",
-      "center_heading_plus": "Você queria ir para o Excalidraw+ em vez disso?",
+      "center_heading_plus": "Você queria ir para o Creativedraw+ em vez disso?",
       "menuHint": "Exportar, preferências, idiomas..."
     },
     "defaults": {
