--- a/src/locales/pt-PT.json
+++ b/src/locales/pt-PT.json
@@ -44,7 +44,7 @@
     "withBackground": "Fundo",
     "exportEmbedScene": "Cena embutida",
     "exportEmbedScene_details": "Os dados da cena serão guardados no ficheiro PNG/SVG exportado para que a cena possa ser restaurada.\nIrá aumentar o tamanho do ficheiro exportado.",
-    "addWatermark": "Adicionar \"Feito com Excalidraw\"",
+    "addWatermark": "Adicionar \"Feito com Creativedraw\"",
     "handDrawn": "Manuscrito",
     "normal": "Normal",
     "code": "Código",
@@ -77,7 +77,7 @@
     "untitled": "Sem título",
     "name": "Nome",
     "yourName": "O seu nome",
-    "madeWithExcalidraw": "Feito com Excalidraw",
+    "madeWithExcalidraw": "Feito com Creativedraw",
     "group": "Agrupar seleção",
     "ungroup": "Desagrupar seleção",
     "collaborators": "Colaboradores",
@@ -105,7 +105,7 @@
     "showBackground": "Mostrar seletor de cores do fundo",
     "toggleTheme": "Alternar tema",
     "personalLib": "Biblioteca pessoal",
-    "excalidrawLib": "Biblioteca do Excalidraw",
+    "excalidrawLib": "Biblioteca do Creativedraw",
     "decreaseFontSize": "Reduzir o tamanho do tipo de letra",
     "increaseFontSize": "Aumentar o tamanho do tipo de letra",
     "unbindText": "Desvincular texto",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "Não é possível exportar uma área de desenho vazia.",
     "couldNotCopyToClipboard": "Não foi possível copiar para a área de transferência.",
     "decryptFailed": "Não foi possível desencriptar os dados.",
-    "uploadedSecurly": "O upload foi protegido com criptografia de ponta a ponta, o que significa que o servidor do Excalidraw e terceiros não podem ler o conteúdo.",
+    "uploadedSecurly": "O upload foi protegido com criptografia de ponta a ponta, o que significa que o servidor do Creativedraw e terceiros não podem ler o conteúdo.",
     "loadSceneOverridePrompt": "Se carregar um desenho externo substituirá o conteúdo existente. Quer continuar?",
     "collabStopOverridePrompt": "Ao interromper a sessão irá substituir o último desenho guardado. Tem a certeza?\n\n(Caso queira manter o último desenho, simplesmente feche a janela do navegador.)",
     "errorAddingToLibrary": "Não foi possível adicionar o item à biblioteca",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "Isso adicionará {{numShapes}} forma(s) à sua biblioteca. Tem a certeza?",
     "imageDoesNotContainScene": "Esta imagem parece não conter dados de cenas. Ativou a incorporação da cena durante a exportação?",
     "cannotRestoreFromImage": "Não foi possível restaurar a cena deste ficheiro de imagem",
-    "invalidSceneUrl": "Não foi possível importar a cena a partir do URL fornecido. Ou está mal formado ou não contém dados JSON do Excalidraw válidos.",
+    "invalidSceneUrl": "Não foi possível importar a cena a partir do URL fornecido. Ou está mal formado ou não contém dados JSON do Creativedraw válidos.",
     "resetLibrary": "Isto irá limpar a sua biblioteca. Tem a certeza?",
     "removeItemsFromsLibrary": "Apagar {{count}} item(ns) da biblioteca?",
     "invalidEncryptionKey": "Chave de encriptação deve ter 22 caracteres. A colaboração ao vivo está desativada.",
@@ -276,7 +276,7 @@
     "desc_inProgressIntro": "A sessão de colaboração ao vivo está agora em andamento.",
     "desc_shareLink": "Partilhe este link com qualquer pessoa com quem queira colaborar:",
     "desc_exitSession": "Interrompendo a sessão irá desconectar-se da sala, mas poderá continuar a trabalhar com a cena localmente. Note que isso não afetará outras pessoas e elas ainda poderão colaborar nas versões deles.",
-    "shareTitle": "Participe numa sessão de colaboração ao vivo no Excalidraw"
+    "shareTitle": "Participe numa sessão de colaboração ao vivo no Creativedraw"
   },
   "errorDialog": {
     "title": "Erro"
@@ -288,9 +288,9 @@
     "link_title": "Link partilhável",
     "link_details": "Exportar como um link de apenas leitura.",
     "link_button": "Exportar para link",
-    "excalidrawplus_description": "Guardar a cena no seu espaço de trabalho Excalidraw+",
+    "excalidrawplus_description": "Guardar a cena no seu espaço de trabalho Creativedraw+",
     "excalidrawplus_button": "Exportar",
-    "excalidrawplus_exportError": "Não foi possível exportar para o Excalidraw+ neste momento..."
+    "excalidrawplus_exportError": "Não foi possível exportar para o Creativedraw+ neste momento..."
   },
   "helpDialog": {
     "blog": "Leia o nosso blogue",
@@ -373,8 +373,8 @@
     "removeItemsFromLib": "Remover os itens seleccionados da biblioteca"
   },
   "encrypted": {
-    "tooltip": "Os seus desenhos são encriptados de ponta-a-ponta, por isso os servidores do Excalidraw nunca os verão.",
-    "link": "Publicação de blogue na encriptação ponta-a-ponta no Excalidraw"
+    "tooltip": "Os seus desenhos são encriptados de ponta-a-ponta, por isso os servidores do Creativedraw nunca os verão.",
+    "link": "Publicação de blogue na encriptação ponta-a-ponta no Creativedraw"
   },
   "stats": {
     "angle": "Ângulo",
@@ -452,7 +452,7 @@
   "welcomeScreen": {
     "app": {
       "center_heading": "Todos os dados são guardados no seu navegador local.",
-      "center_heading_plus": "Queria antes ir para o Excalidraw+?",
+      "center_heading_plus": "Queria antes ir para o Creativedraw+?",
       "menuHint": "Exportar, preferências, idiomas..."
     },
     "defaults": {
