--- a/src/locales/tr-TR.json
+++ b/src/locales/tr-TR.json
@@ -44,7 +44,7 @@
     "withBackground": "Arka plan",
     "exportEmbedScene": "Gömülü sahne",
     "exportEmbedScene_details": "Sahne verileri, sahnenin geri yüklenebilmesi için dışa aktarılan PNG/SVG dosyasına kaydedilecektir.\nDışa aktarılan dosya boyutunu artıracaktır.",
-    "addWatermark": "\"Excalidraw ile yapıldı\" yazısını ekle",
+    "addWatermark": "\"Creativedraw ile yapıldı\" yazısını ekle",
     "handDrawn": "El-yazısı",
     "normal": "Normal",
     "code": "Kod",
@@ -77,7 +77,7 @@
     "untitled": "Adsız",
     "name": "İsim",
     "yourName": "İsminiz",
-    "madeWithExcalidraw": "Excalidraw ile yapıldı",
+    "madeWithExcalidraw": "Creativedraw ile yapıldı",
     "group": "Seçimi grup yap",
     "ungroup": "Seçilen grubu dağıt",
     "collaborators": "Ortaklar",
@@ -105,7 +105,7 @@
     "showBackground": "Arkaplan için renk seçiciyi göster",
     "toggleTheme": "Temayı etkinleştir/devre dışı bırak",
     "personalLib": "Kişisel Kitaplık",
-    "excalidrawLib": "Excalidraw Kitaplığı",
+    "excalidrawLib": "Creativedraw Kitaplığı",
     "decreaseFontSize": "Yazı Tipi Boyutunu Küçült",
     "increaseFontSize": "Yazı Tipi Boyutunu Büyült",
     "unbindText": "Metni çöz",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "Boş tuval dışarıya aktarılamaz.",
     "couldNotCopyToClipboard": "Panoya kopyalanamıyor.",
     "decryptFailed": "Şifrelenmiş veri çözümlenemedi.",
-    "uploadedSecurly": "Yükleme uçtan uca şifreleme ile korunmaktadır. Excalidraw sunucusu ve üçüncül şahıslar içeriği okuyamayacaktır.",
+    "uploadedSecurly": "Yükleme uçtan uca şifreleme ile korunmaktadır. Creativedraw sunucusu ve üçüncül şahıslar içeriği okuyamayacaktır.",
     "loadSceneOverridePrompt": "Harici çizimler yüklemek mevcut olan içeriği değiştirecektir. Devam etmek istiyor musunuz?",
     "collabStopOverridePrompt": "Oturumu sonlandırmak daha önceki, yerel olarak kaydedilmiş çizimin üzerine kaydedilmesine sebep olacak. Emin misiniz?\n\n(Yerel çiziminizi kaybetmemek için tarayıcı sekmesini kapatabilirsiniz.)",
     "errorAddingToLibrary": "Öğe kütüphaneye eklenemedi",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "Bu, kitaplığınıza {{numShapes}} tane şekil ekleyecek. Emin misiniz?",
     "imageDoesNotContainScene": "Bu görüntü herhangi bir sahne verisi içermiyor gibi görünüyor. Dışa aktarma sırasında sahne yerleştirmeyi etkinleştirdiniz mi?",
     "cannotRestoreFromImage": "Sahne bu resim dosyasından geri yüklenemedi",
-    "invalidSceneUrl": "Verilen bağlantıdan çalışma alanı yüklenemedi. Dosya bozuk olabilir veya geçerli bir Excalidraw JSON verisi bulundurmuyor olabilir.",
+    "invalidSceneUrl": "Verilen bağlantıdan çalışma alanı yüklenemedi. Dosya bozuk olabilir veya geçerli bir Creativedraw JSON verisi bulundurmuyor olabilir.",
     "resetLibrary": "Bu işlem kütüphanenizi sıfırlayacak. Emin misiniz?",
     "removeItemsFromsLibrary": "{{count}} öğe(ler) kitaplıktan kaldırılsın mı?",
     "invalidEncryptionKey": "Şifreleme anahtarı 22 karakter olmalı. Canlı işbirliği devre dışı bırakıldı.",
@@ -276,7 +276,7 @@
     "desc_inProgressIntro": "Ortak çalışma ortamı oluşturuldu.",
     "desc_shareLink": "Bu bağlantıyı birlikte çalışacağınız kişilerle paylaşabilirsiniz:",
     "desc_exitSession": "Çalışma ortamını kapattığınızda ortak çalışmadan ayrılmış olursunuz ancak kendi versiyonunuzda çalışmaya devam edebilirsiniz. Bu durumda ortak çalıştığınız diğer kişiler etkilenmeyecek, çalışma ortamındaki versiyon üzerinden çalışmaya devam edebilecekler.",
-    "shareTitle": "Excalidraw'da canlı ortak calışma oturumuna katıl"
+    "shareTitle": "Creativedraw'da canlı ortak calışma oturumuna katıl"
   },
   "errorDialog": {
     "title": "Hata"
@@ -288,9 +288,9 @@
     "link_title": "Paylaşılabilir bağlantı",
     "link_details": "Salt okunur bir bağlantı olarak dışa aktarın.",
     "link_button": "Bağlantı olarak dışa aktar",
-    "excalidrawplus_description": "Sahneyi Excalidraw+ çalışma alanınıza kaydedin.",
+    "excalidrawplus_description": "Sahneyi Creativedraw+ çalışma alanınıza kaydedin.",
     "excalidrawplus_button": "Dışa aktar",
-    "excalidrawplus_exportError": "Şu anda Excalidraw+'a aktarılamadı..."
+    "excalidrawplus_exportError": "Şu anda Creativedraw+'a aktarılamadı..."
   },
   "helpDialog": {
     "blog": "Blog'umuzu okuyun",
@@ -373,8 +373,8 @@
     "removeItemsFromLib": "Seçilen ögeleri kütüphaneden kaldır"
   },
   "encrypted": {
-    "tooltip": "Çizimleriniz uçtan-uca şifrelenmiştir, Excalidraw'ın sunucuları bile onları göremez.",
-    "link": "Excalidraw'da uçtan uca şifreleme hakkında blog yazısı"
+    "tooltip": "Çizimleriniz uçtan-uca şifrelenmiştir, Creativedraw'ın sunucuları bile onları göremez.",
+    "link": "Creativedraw'da uçtan uca şifreleme hakkında blog yazısı"
   },
   "stats": {
     "angle": "Açı",
