--- a/src/locales/uk-UA.json
+++ b/src/locales/uk-UA.json
@@ -44,7 +44,7 @@
     "withBackground": "Фон",
     "exportEmbedScene": "Вбудована сцена",
     "exportEmbedScene_details": "Дані сцени будуть збережені в експортований файл PNG/SVG. Ця сцена може бути відновленна з нього, однак це збільшить розмір експортованого файлу.",
-    "addWatermark": "Додати «Накреслене в Excalidraw»",
+    "addWatermark": "Додати «Накреслене в Creativedraw»",
     "handDrawn": "Ручний апарат",
     "normal": "Звичайний",
     "code": "Код",
@@ -77,7 +77,7 @@
     "untitled": "Без назви",
     "name": "Ім’я",
     "yourName": "Ваше ім’я",
-    "madeWithExcalidraw": "Накреслене в Excalidraw",
+    "madeWithExcalidraw": "Накреслене в Creativedraw",
     "group": "Групувати виділене",
     "ungroup": "Розгрупувати виділене",
     "collaborators": "Співавтори",
@@ -105,7 +105,7 @@
     "showBackground": "Показати палітру для фону",
     "toggleTheme": "Перемкнути тему",
     "personalLib": "Персональна бібліотека",
-    "excalidrawLib": "Бібліотека Excalidraw",
+    "excalidrawLib": "Бібліотека Creativedraw",
     "decreaseFontSize": "Зменшити розмір шрифту",
     "increaseFontSize": "Збільшити розмір шрифту",
     "unbindText": "Відв'язати текст",
@@ -181,7 +181,7 @@
     "cannotExportEmptyCanvas": "Не вийшло експортувати пусте полотно.",
     "couldNotCopyToClipboard": "Не вдалося скопіювати до буфера обміну.",
     "decryptFailed": "Не вдалося розшифрувати дані.",
-    "uploadedSecurly": "Це завантаження було захищене наскрізним шифруванням, а це означає що сервер Excalidraw та інші не зможуть прочитати вміст.",
+    "uploadedSecurly": "Це завантаження було захищене наскрізним шифруванням, а це означає що сервер Creativedraw та інші не зможуть прочитати вміст.",
     "loadSceneOverridePrompt": "Завантаження зовнішнього креслення замінить ваш наявний контент. Продовжити?",
     "collabStopOverridePrompt": "Зупинка сесії перезапише ваш попередній, локально збережений малюнок. Ви впевнені?\n\n(Якщо ви хочете зберегти локальний малюнок, просто закрийте замість нього вкладку браузера.)",
     "errorAddingToLibrary": "Не вдалося додати елемент до бібліотеки",
@@ -189,7 +189,7 @@
     "confirmAddLibrary": "Це призведе до додавання {{numShapes}} фігур до вашої бібліотеки. Ви впевнені?",
     "imageDoesNotContainScene": "Виглядає ніби зображення не містить корисної інформації. Ви увімкнули вбудовування сцени при експорті?",
     "cannotRestoreFromImage": "Сцена не може бути відновлена з цього файлу зображення",
-    "invalidSceneUrl": "Не вдалося імпортувати сцену з наданого URL. Він або недоформований, або не містить дійсних даних Excalidraw JSON.",
+    "invalidSceneUrl": "Не вдалося імпортувати сцену з наданого URL. Він або недоформований, або не містить дійсних даних Creativedraw JSON.",
     "resetLibrary": "Це призведе до очищення бібліотеки. Ви впевнені?",
     "removeItemsFromsLibrary": "Видалити {{count}} елемент(ів) з бібліотеки?",
     "invalidEncryptionKey": "Ключ шифрування повинен бути довжиною до 22 символів. Спільну роботу вимкнено.",
@@ -276,7 +276,7 @@
     "desc_inProgressIntro": "Сесія спільної роботи над кресленням триває.",
     "desc_shareLink": "Поділіться цим посиланням з будь-ким для спільної роботи:",
     "desc_exitSession": "Зупинка сесії відключить вас від кімнати, але ви зможете продовжити роботу з полотном локально. Зверніть увагу, що це не вплине на інших людей, і вони все одно зможуть працювати над їх версією.",
-    "shareTitle": "Приєднатися до сеансу спільної роботи на Excalidraw"
+    "shareTitle": "Приєднатися до сеансу спільної роботи на Creativedraw"
   },
   "errorDialog": {
     "title": "Помилка"
@@ -288,9 +288,9 @@
     "link_title": "Доступ за посиланням",
     "link_details": "Експортувати як посилання тільки для читання.",
     "link_button": "Експортувати у посилання",
-    "excalidrawplus_description": "Збережіть сцену у вашому обліковому записі Excalidraw+.",
+    "excalidrawplus_description": "Збережіть сцену у вашому обліковому записі Creativedraw+.",
     "excalidrawplus_button": "Експортувати",
-    "excalidrawplus_exportError": "Не вдалося експортувати у Excalidraw+..."
+    "excalidrawplus_exportError": "Не вдалося експортувати у Creativedraw+..."
   },
   "helpDialog": {
     "blog": "Наш блог",
@@ -373,8 +373,8 @@
     "removeItemsFromLib": "Видалити вибрані елементи з бібліотеки"
   },
   "encrypted": {
-    "tooltip": "Ваші креслення захищені наскрізним шифруванням — сервери Excalidraw ніколи їх не побачать.",
-    "link": "Допис у блозі на наскрізному шифруванні в Excalidraw"
+    "tooltip": "Ваші креслення захищені наскрізним шифруванням — сервери Creativedraw ніколи їх не побачать.",
+    "link": "Допис у блозі на наскрізному шифруванні в Creativedraw"
   },
   "stats": {
     "angle": "Кут",
