--- a/src/locales/zh-HK.json
+++ b/src/locales/zh-HK.json
@@ -44,7 +44,7 @@
     "withBackground": "連同背景色一併匯出",
     "exportEmbedScene": "嵌入畫布內容",
     "exportEmbedScene_details": "雖然使用「嵌入畫布內容」匯出的 PNG 或 SVG 檔案大小會有所增加，但是你可以透過匯入包含畫布內容的存檔來回復及繼續編輯。",
-    "addWatermark": "加入「使用 Excalidraw 製圖」水印",
+    "addWatermark": "加入「使用 Creativedraw 製圖」水印",
     "handDrawn": "手繪體",
     "normal": "電腦字體",
     "code": "等寬體",
@@ -77,7 +77,7 @@
     "untitled": "未命名的作品",
     "name": "",
     "yourName": "你的名稱",
-    "madeWithExcalidraw": "使用 Excalidraw 製圖",
+    "madeWithExcalidraw": "使用 Creativedraw 製圖",
     "group": "建立物件群組",
     "ungroup": "取消物件群組",
     "collaborators": "已連線的協作者",
